Deployment_App.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: devops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 10
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: yossefazozz/k8s_nodejs:2.1
          ports:
            - containerPort: 5000
          
          resources:
            requests:
              memory: "150Mi"
              cpu: "200m"
            limits:
              memory: "300Mi"
              cpu: "300m"
          volumeMounts:
            - name: config-volume
              mountPath: /data

      volumes:
        - name: config-volume
          emptyDir: {}
